# django_tutorial

./: db.sqlite3
django-polls/: LICENSE  README.rst  pyproject.toml
django-polls/django_polls.egg-info/: PKG-INFO  SOURCES.txt
django_polls/: admin.py  apps.py  urls.py
django_polls/migrations/: 0002_alter_choice_question.py
django_tutorial/: settings.py  urls.py
django_tutorial/study-notes/: README.md
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: detail.html  index.html  results.html
study-notes/: 2026-02-02.md  2026-02-03.md  2026-02-04.md  2026-02-05.md  2026-02-06.md  README.md
